implementation of blog and addition of pics

--- a/blog.html
+++ b/blog.html
@@ -122,6 +122,23 @@
       </nav>
     </div><!-- End Breadcrumbs -->
 
+  </head>
+  <body>
+    <div class="slider">
+      <div class="slides">
+
+        <img src="assets/img/Boy-attending-video-lecture.png" alt="Slide 1">
+        <img src="assets/img/bluejkuat.jpg"  alt="Slide 2">
+        <img src="assets/img/jkuat.jpeg"alt="Slide 3">
+        <img src="assets/img/hero-bg-abstract.jpg" alt="Slide 3">
+        <img src="assets/img/apple-touch-icon.png" alt="Slide 3">
+        <img src="assets/img/cta-bg.jpg" alt="Slide 3">
+        <img src="assets/img/logo01.png" alt="Slide 3">
+      </div>
+    </div>
+
+
+
     <!-- ======= Blog Section ======= -->
     <section id="blog" class="blog">
       <div class="container" data-aos="fade-up">
